<resources>
    <string name="app_name">Task3</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="office">Office</string>
    <string name="promotion">Promotion</string>
    <string name="health">Health</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="remember">Remember</string>
    <string name="password">Password</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
    <string name="certificated">Certificated</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="directions">Directions</string>
    <string name="_125">125</string>
    <string name="_20k">20k</string>
    <string name="_22">22</string>
    <string name="android">Android</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="address_description">Address Description</string>
    <string name="username">Username</string>
    <string name="_125">125</string>
    <string name="posts">Posts</string>
    <string name="_22">22</string>
    <string name="followers">Followers</string>
    <string name="_20k">20k</string>
    <string name="address_description">Address Description</string>
    <string name="android">Android</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="_125">125</string>
    <string name="_20k">20k</string>
    <string name="_22">22</string>
    <string name="posts">Posts</string>
    <string name="username">Username</string>
    <string name="address_description">Address Description</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
</resources>