<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/attractions"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/attractions" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/dining"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/dining" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/education"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/education" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/family"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/family" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/health"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/health" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/office" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:text="@string/office"
            android:textSize="@dimen/text_view_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/promotions"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/promotion" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/radio"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/radio" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/recipies"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:textSize="@dimen/text_view_size"
            android:text="@string/recipes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/sports"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:text="@string/sports"
            android:textSize="@dimen/text_view_size" />
    </LinearLayout>

</LinearLayout>