<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
       android:layout_gravity="center"
        android:text="@string/sign_in"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_text"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:layout_margin="@dimen/linear_elements_margin"
        android:padding="10dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_text"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:id="@+id/remember_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginRight="50dp"
            android:textColor="@android:color/black"
            android:text="@string/remember"/>


        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/btn_rounded"/>

    <TextView
        android:layout_marginTop="200dp"
        android:id="@+id/just_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="* Just sign in"
        android:layout_gravity="center"
        android:textSize="18sp" />

</LinearLayout>