<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_text"
        app:layout_constraintTop_toBottomOf="@+id/signInText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/linear_elements_margin"
        android:hint="@string/email"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_margin="@dimen/linear_elements_margin"
        android:hint="@string/password"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        android:layout_marginTop="10dp"
        android:checked="true" />

    <TextView
        android:id="@+id/remember_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/checkBox"
        android:layout_marginTop="10dp"
        android:text="@string/remember"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintRight_toRightOf="@+id/password"
        android:layout_marginTop="10dp"
        android:text="Forgot password?"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        android:layout_marginTop="200dp"
        android:background="@drawable/btn_rounded"/>

    <TextView
        android:id="@+id/just_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="* Just sign in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>